--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,11 @@
   background-clip: text;
   margin: 20px 0;
 }
+@media screen and (max-width: 600px) {
+  .heading {
+    font-size: 40px;
+  }
+}
 
 /* Carousel/Glider custom styling */
 .rec.rec-arrow {
@@ -81,6 +86,11 @@ button.rec-dot:focus {
 .login-form .row {
   display: flex;
   color: white;
+}
+@media screen and (max-width: 830px) {
+  .login-form .row {
+    flex-direction: column;
+  }
 }
 
 .login-form .row .user-box {
@@ -219,8 +229,33 @@ button.rec-dot:focus {
   background-clip: text;
   -webkit-background-clip: text;
 }
+
 @media (max-width: 700px) {
   .footer .logo {
     width: 80%;
   }
+}
+
+/* FORM */
+select {
+  width: 90%;
+  padding: 0.5rem;
+  margin: 1rem;
+  text-align: center;
+  background: black;
+  color: white;
+}
+.btn {
+  width: 30%;
+  padding: 0.5rem;
+  margin: 1rem;
+  text-align: center;
+  background: linear-gradient(to right, #feac5e, #c779d0, #4bc0c8);
+}
+.btn:hover {
+  background: linear-gradient(to right, #fb7ba2, #fce043);
+  cursor: pointer;
+}
+::-webkit-calendar-picker-indicator {
+  filter: invert(1);
 }
