--- a/client/src/App.css
+++ b/client/src/App.css
@@ -291,26 +291,8 @@ option {
   background-color: black;
 }
 
-.login-page {
-  font-size: 2rem;
-  padding: 3rem;
-}
-.admin {
-  margin: 1rem;
-  color: white;
-}
-.person {
-  border: solid 1px white;
-  border-radius: 1rem;
-  padding: 1rem;
-  margin: 1rem;
-}
-.person .btn {
-  margin-right: 2rem;
-}
-.card-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
+
+
+
+/* Admin Page */
+
