--- a/client/src/components/admin/Admin.css
+++ b/client/src/components/admin/Admin.css
@@ -1,63 +1,60 @@
-
 .login-page {
-    font-size: 2rem;
-    padding: 3rem;
-  }
-  .admin {
-    margin: 1rem;
-    color: white;
-  }
-  .person {
-    border: solid 1px white;
-    border-radius: 1rem;
-    padding: 1rem;
-    margin: 1rem;
-  }
-  .person .btn {
-    margin-right: 2rem;
-  }
-  .card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  .studentdetails{
-    margin: 20px auto;
-    text-align: left;
-    width: 80%;
-    background-color: #17141d;
-    padding: 20px ;
-    display: flex;
-    border-radius: 10px;
-    color: darkgray;
-  }
-  .studentdetails-col{
-    flex-basis: 33%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    
-  }
-  .studentdetails h4{
-    color: white;
-  }
-  
-  .selected{
-    background-color: transparent;
-    color: green;
-    border: 1px solid green;
-  }
-  .rejected {
-    background-color: transparent;
-    color: red;
-    border: 1px solid red;
-  }
-  .status-btn{
-    display: flex;
-    justify-content:space-evenly
-    
-  }
-  .col1{
-    text-align: left;
-  }
+  font-size: 2rem;
+  padding: 3rem;
+}
+.admin {
+  margin: 1rem;
+  color: white;
+}
+.person {
+  border: solid 1px white;
+  border-radius: 1rem;
+  padding: 1rem;
+  margin: 1rem;
+}
+.person .btn {
+  margin-right: 2rem;
+}
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.studentdetails {
+  margin: 20px auto;
+  text-align: left;
+  width: 80%;
+  background-color: #17141d;
+  padding: 20px;
+  display: flex;
+  border-radius: 10px;
+  color: darkgray;
+}
+.studentdetails-col {
+  flex-basis: 33%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.studentdetails h4 {
+  color: white;
+}
+
+.selected {
+  background-color: transparent;
+  color: green;
+  border: 1px solid green;
+}
+.rejected {
+  background-color: transparent;
+  color: red;
+  border: 1px solid red;
+}
+.status-btn {
+  display: flex;
+  justify-content: space-evenly;
+}
+.col1 {
+  text-align: left;
+}
