--- a/client/src/App.css
+++ b/client/src/App.css
@@ -290,9 +290,9 @@ select {
 option {
   background-color: black;
 }
+.loading{
+  text-align: center;
+  color: white;
 
-
-
-
-/* Admin Page */
+}
 
