--- a/client/src/App.css
+++ b/client/src/App.css
@@ -176,8 +176,8 @@ select {
 /* Cards */
 .card {
   display: flex;
-  height: 350px;
-  width: 300px;
+  height: 400px;
+  width: 400px;
   background-color: #17141d;
   border-radius: 10px;
   /* box-shadow: -1rem 0 3rem #000; */
@@ -306,4 +306,19 @@ option {
   border-radius: 5px;
   cursor: pointer;
   transition: 0.5s;
+}
+.category-tooltip {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem;
+}
+.tooltip-btn {
+  padding: 1rem;
+  background-color: #17141d;
+  border-radius: 5px;
+}
+.tooltip-btn:hover {
+  cursor: pointer;
 }
