--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,27 +10,21 @@
   user-select: none;
 }
 
--webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #f5f5f5;
+  background-color: #1a1a1a;
   border-radius: 10px;
 }
 
--webkit-scrollbar {
-  width: 10px;
-  background-color: #f5f5f5;
+body::-webkit-scrollbar {
+  width: 5px;
+  background-color: #1a1a1a;
 }
 
--webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-image: -webkit-gradient(
-    linear,
-    left bottom,
-    left top,
-    color-stop(0.44, rgb(122, 153, 217)),
-    color-stop(0.72, rgb(73, 125, 189)),
-    color-stop(0.86, rgb(28, 58, 148))
-  );
+  background: linear-gradient(to right, #a123db 0%, rgb(196, 58, 58));
+  opacity: 0.5;
 }
 .App {
   text-align: center;
