updated touch icon and meta description

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -290,8 +290,8 @@ button.rec-dot:focus {
 
 .row .user-box input,
 select {
-  width: 100%;
-  padding: 10px 0;
+  width: 99%;
+  padding: 10px 5px;
   font-size: 16px;
   color: white;
   margin-bottom: 30px;
