--- a/client/src/App.css
+++ b/client/src/App.css
@@ -639,3 +639,28 @@ option {
   animation: blink linear infinite 5s;
   font: inherit;
 }
+.toggle-option {
+  display: flex;
+}
+.toggle-option button {
+  background-color: transparent;
+  border: 2px solid #fff;
+  padding: 5px 15px;
+  color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: 500;
+}
+.cul-desc {
+  font-size: 2rem;
+  padding: 50px;
+}
+@media (max-width: 700px) {
+  .cul-desc {
+    padding: 10px;
+    font-size: 1.4rem;
+  }
+}
+.disabled {
+  background: #333;
+}
