--- a/client/src/App.css
+++ b/client/src/App.css
@@ -368,6 +368,12 @@ select {
   margin: 0 auto;
   color: white;
   flex-direction: column;
+  overflow-y: scroll;
+}
+@media (max-width: 700px) {
+  .card {
+    height: 500px;
+  }
 }
 .card hr {
   width: 80%;
