--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,9 @@ body::-webkit-scrollbar-thumb {
   text-shadow: 0 0 5px #fff, 0 0 80px #0ff, 0 0 90px #0ff, 0 0 100px #0ff,
     0 0 120px #0ff;
 }
+button:active, button:focus {
+  outline: none
+}
 .glider {
   margin: 0 auto;
   width: 80%;
