--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,8 +37,9 @@ body::-webkit-scrollbar-thumb {
   text-shadow: 0 0 5px #fff, 0 0 80px #0ff, 0 0 90px #0ff, 0 0 100px #0ff,
     0 0 120px #0ff;
 }
-button:active, button:focus {
-  outline: none
+button:active,
+button:focus {
+  outline: none;
 }
 .glider {
   margin: 0 auto;
@@ -394,7 +395,6 @@ select {
   margin: 0 auto;
   height: 100%;
 }
-
 @media (max-width: 600px) {
   .card {
     height: 500px;
@@ -669,4 +669,9 @@ option {
 }
 .disabled {
   background: #333;
+}
+
+.cat-closed {
+  opacity: 0.4;
+  cursor: not-allowed !important;
 }
